--- a/views/article.handlebars
+++ b/views/article.handlebars
@@ -14,8 +14,8 @@
                 {{#each notes}}
                 <div class="note-body">
                     {{body}}
-                    <img src="/images/remove-button.png" data-article-id="{{_id}}" class="deleteNote"
-                        data-note-id="{{_id}}" data-article-id="{{../_id}}">
+                    <img src="/images/remove-button.png" data-article-id="{{_id}}" class="delete-note"
+                        data-note-id="{{_id}}" data-article-id="{{../_id}}" >
                 </div>
                 {{/each}}
             </div>
