scraping is working

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,6 @@
-<div class="head container">
+<div class="head container-fluid">
     <div class="row">
+        <div class="col-1"></div>
         <div class="pos-f-t col-1">
             <div class="collapse" id="navbarToggleExternalContent">
                 <div class=" p-4">
@@ -24,10 +25,10 @@
             </nav>
         </div>
 
-        <h1 class="websiteTitle col-10">Epicenter <span class="subtitle">For the latest and greatest in political
+        <h1 class="websiteTitle col-8">Epicenter <span class="subtitle">For the latest and greatest in political
                 news</span>
         </h1>
-        <div class="col-1"></div>
+        <div class="col-2"></div>
     </div>
 </div>
 
