--- a/views/partials/articles.handlebars
+++ b/views/partials/articles.handlebars
@@ -13,6 +13,6 @@
         <img src="/images/nosave.png" data-article-id="{{_id}}" data-save="true" class="imgsaveadd bookmark">
         {{/if}}
 
-        <img src="/images/addnote.png" data-article-id="{{_id}}" class="imgsaveadd">
+        <img src="/images/addnote.png" data-article-id="{{_id}}" class="imgsaveadd individual-article">
     </div>
 </div>
