--- a/views/article.handlebars
+++ b/views/article.handlebars
@@ -34,10 +34,10 @@
         <br>
         <form>
             <div class="form-group">
-                <label for="noteInput">Add a Note:</label>
+                <label for="noteInput" class="labelNote">Add a Note:</label>
                 <textarea class="form-control" id="{{_id}}-input" rows="3"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary add-note" data-article-id="{{_id}}">Submit</button>
+            <button type="submit" class="btn submit-btn add-note" data-article-id="{{_id}}">Submit</button>
         </form>
     </div>
 </div>
