--- a/views/article.handlebars
+++ b/views/article.handlebars
@@ -1,24 +1,24 @@
-<div id="{{_id}}" class="container">
-    <div class="indTitle">{{title}}</div>
+<div id="{{article._id}}" class="container">
+    <div class="indTitle">{{article.title}}</div>
     <hr class="line">
-    <p class='authorInd'>by {{author}}</p>
-    <p class="summaryInd">{{description}} </p>
-    <a href="{{link}}" target="_blank">
+    <p class='authorInd'>by {{article.author}}</p>
+    <p class="summaryInd">{{article.description}} </p>
+    <a href="{{article.link}}" target="_blank">
         <div class="fullArticle">Read Full Article Here.
         </div>
     </a>
 
     <div class="note">
-        {{#if note}}
+        {{#if article.note}}
         <div class="notes">
             <div class="notes-header">
                 Notes
             </div>
             <div class="all-notes container">
-                {{#each note}}
+                {{#each article.note}}
                 <div class="note-body row">
                     <div class="col-11">{{body}}</div>
-                    <div class="col-1 exit-button"> <img src="/images/remove-button.png" data-article-id="{{../_id}}" class=" delete-note" id=""
+                    <div class="col-1 exit-button"> <img src="/images/remove-button.png" data-article-id="{{../_id}}" class=" delete-note" 
                         data-note-id="{{_id}}"></div>
                 </div>
                 <hr class="noteline">
