--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Huffington Post Political News Scraper</title>
+    <link rel=icon href=/images/addnote.png>
     {{!-- FONT --}}
     <link href="https://fonts.googleapis.com/css?family=Lato|Playfair+Display:400,700&display=swap" rel="stylesheet">
     <!-- Bootstrap HTML/CSS-->
