--- a/views/article.handlebars
+++ b/views/article.handlebars
@@ -28,6 +28,8 @@
         {{else}}
         <div class="notes">
             <div class="notes-header">
+                {{_id}}
+                <br>
                 There are no comments for this article yet. Why don't you write the first one?
             </div>
         </div>
@@ -36,9 +38,9 @@
         <form>
             <div class="form-group">
                 <label for="noteInput" class="labelNote">Add a Comment:</label>
-                <textarea class="form-control" id="{{_id}}-input" rows="3"></textarea>
+                <textarea class="form-control" id="{{article._id}}-input" rows="3"></textarea>
             </div>
-            <button type="submit" class="btn submit-btn add-note" data-article-id="{{_id}}">Submit</button>
+            <button type="submit" class="btn submit-btn" id="add-note" data-article-id="{{article._id}}">Submit</button>
         </form>
     </div>
 </div>
